--- a/01-color-flipper/setup/index.html
+++ b/01-color-flipper/setup/index.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <nav>
+      <div class="nav-center">
+        <h4>Colour Flipper</h4>
+        <ul class="nav-links">
+          <li>
+            <a href="index.html">Simple</a>
+          </li>
+          <li>
+            <a href="hex.html">Hex</a>
+          </li>
+        </ul>
+    </nav>
     <h1>color flipper</h1>
     <!-- javascript -->
     <script src="app.js"></script>
