--- a/01-color-flipper/setup/index.html
+++ b/01-color-flipper/setup/index.html
@@ -21,6 +21,15 @@
           </li>
         </ul>
     </nav>
+    <main>
+      <div class="container">
+        <h2>
+          Background Colour:
+          <span class="color">
+            #f1f5f8
+          </span>
+        </h2>
+    </main>
     <h1>color flipper</h1>
     <!-- javascript -->
     <script src="app.js"></script>
