--- a/01-color-flipper/setup/index.html
+++ b/01-color-flipper/setup/index.html
@@ -29,6 +29,7 @@
             #f1f5f8
           </span>
         </h2>
+        <button class="btn btn-hero" id="btn">click me</button>
     </main>
     <h1>color flipper</h1>
     <!-- javascript -->
